<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fafafa">
    
    <LinearLayout 
    	android:id="@+id/linearlayout_header"
		android:orientation="vertical" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:background="@drawable/bottombar_landscape_565">
	
		<LinearLayout 
			android:id="@+id/linearlayout_header"
			android:orientation="horizontal" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
	
			<ImageButton 
				android:id="@+id/button_selectfile"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" 
				android:src="@drawable/ic_menu_movie" />
	
			<LinearLayout 
		    	android:id="@+id/linearlayout_header"
				android:orientation="vertical" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:paddingLeft="5dip">
				
				<TextView 
					android:id="@+id/textview_inputfile"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/label_input" 
					android:textSize="18sp" />
					
				<TextView 
					android:id="@+id/textview_inputfile_length"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/input_file_info"
					android:textSize="12sp"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
    
    <ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/scrollview_result_container">
		            	
    <LinearLayout
		android:id="@+id/linearlayout_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RadioGroup
		  	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:orientation="vertical"
		   	android:background="#ffecfbff"
		   	android:paddingTop="5dip">
		   	
		   	<TextView
	           	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:text="@string/label_bitrate"/>
	            
		   	<RadioButton
		    	android:id="@+id/radiobutton_video_option1"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/bitrate_128"
		    	android:textColor="#88000000"/>
		    	
		   <RadioButton
		    	android:id="@+id/radiobutton_video_option2"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/bitrate_512"
		    	android:textColor="#88000000" 
		    	android:checked="true"/>
		    	
		   <RadioButton
		    	android:id="@+id/radiobutton_video_option3"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#88000000"
		    	android:text="@string/bitrate_1024" />
		    	
		 </RadioGroup>
		 
		 <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"/>
		 
		 <RadioGroup
		  	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:orientation="vertical">
		   	<TextView
	           	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:text="@string/label_audio_rate"/>
	            
		   	<RadioButton
		    	android:id="@+id/radiobutton_audio_option1"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#88000000"
		    	android:text="@string/audiorate_16"
		    	android:checked="true"/>
		    	
		   <RadioButton
		    	android:id="@+id/radiobutton_audio_option2"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#88000000"
		    	android:text="@string/audiorate_32"/>
		 </RadioGroup>
		 
		 <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"/>
            
		 <RadioGroup
		  	android:layout_width="fill_parent"
		   	android:layout_height="wrap_content"
		   	android:orientation="vertical"
		   	android:background="#ffecfbff">
		   	
		   	<TextView android:id="@+id/textview_label_bitrate"
	           	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:text="@string/label_audio_chanels"/>
	            
		   	<RadioButton
		    	android:id="@+id/radiobutton_audio_channel1"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#88000000"
		    	android:text="@string/audio_channels_1"/>
		   <RadioButton
		    	android:id="@+id/radiobutton_audio_channel2"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#88000000"
		    	android:text="@string/audio_channels_2"
		    	android:checked="true"/>
		 </RadioGroup>
		 
		 <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@android:drawable/divider_horizontal_dark"/>
		 
		 <TextView android:id="@+id/textview_label_framerate"
	      	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label_frames"
	        android:textColor="#000000"/>
		 <EditText
	    	android:id="@+id/edittext_frames"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:maxLines="1"
	        android:text="@string/framerate"/>

	     <LinearLayout
			android:id="@+id/linearlayout_bottom"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="bottom"
		    android:background="@drawable/bottombar_landscape_565">
		        
			<CheckBox
				android:id="@+id/checkbox_delete_source"
			  	android:layout_width="fill_parent"
			   	android:layout_height="wrap_content"
			   	android:text="@string/delete_src_movie"
			   	android:checked="false"
			   	android:textColor="#88000000"/>
				   	
			<Button 
				android:id="@+id/button_convert"
		       	android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/convert"/>
		</LinearLayout>
	        
    </LinearLayout>
    
    </ScrollView>
		    
</LinearLayout>
